deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: index-deployment
  namespace: index
spec:
  selector:
    matchLabels:
      app: index-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: index-deployment
    spec:
      containers:
      - name: index-deployment
        image:  188696658254.dkr.ecr.us-east-2.amazonaws.com/k8s:1
        ports:
        - containerPort: 80
