ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: index-ing
  namespace: index
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: k8-index.joshmc.xyz     
    http:
      paths:
      - path: /
        backend:
          serviceName: index-service
          servicePort: http
  tls:
  - hosts:
      - k8-index.joshmc.xyz
    secretName: index-secret
